# camera-multitouch

./: CMakeLists.txt  README.md  input.h  input_osx.cpp  input_x11.cpp  main.cpp
mounting-bracket/: arm-horizontal.ipt  arm-vertical.ipt  arm.ipt  assembly.iam  camera.ipt  cameraMount.ipt  tv-mount.ipt  tv.ipt
